// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with a single child 1`] = `
<div
  className="root isAlignedToBaseline"
>
  <CTACenter>
    content
  </CTACenter>
</div>
`;

exports[`rendering renders correctly with all props 1`] = `
<div
  className="root isAlignedToMiddle"
>
  <CTAStart>
    content 1
  </CTAStart>
  <CTACenter>
    content 2
  </CTACenter>
  <CTAEnd>
    content 3
  </CTAEnd>
</div>
`;

exports[`rendering renders correctly with multiple children 1`] = `
<div
  className="root isAlignedToBaseline"
>
  <CTAStart>
    content 1
  </CTAStart>
  <CTACenter>
    content 2
  </CTACenter>
  <CTAEnd>
    content 3
  </CTAEnd>
</div>
`;
